# services/tuttid/api/openapi/tuttid.v1.yaml
@@ -4801,8 +4801,6 @@ components:
         - minimizeAnimation
         - sleepPreventionMode
         - showAppDeveloperSources
-        - enableCursorAgent
-        - enableOpenCodeAgent
         - themeSource
         - updateChannel
         - updatePolicy
@@ -4827,10 +4825,6 @@ components:
           $ref: "#/components/schemas/DesktopDockIconStyle"
         dockPlacement:
           $ref: "#/components/schemas/DesktopDockPlacement"
-        enableCursorAgent:
-          type: boolean
-        enableOpenCodeAgent:
-          type: boolean
         fileDefaultOpenersByExtension:
           $ref: "#/components/schemas/DesktopFileDefaultOpenersByExtension"
         featureFlags:
@@ -5001,15 +4995,9 @@ components:
       additionalProperties: false
       required:
         - defaultAgentProvider
-        - enableCursorAgent
-        - enableOpenCodeAgent
       properties:
         defaultAgentProvider:
           $ref: "#/components/schemas/DesktopDefaultAgentProvider"
-        enableCursorAgent:
-          type: boolean
-        enableOpenCodeAgent:
-          type: boolean
     PutDesktopPreferencesRequest:
       type: object
       additionalProperties: false
